	* src/business/business-gnome/business-gnome.scm: use the new
	  querylist dialog to display the due bills
	* src/business/business-gnome/dialog-invoice.[ch]: create a new
	  API to run a due-bills dialog.
	* src/business/businss-gnome/gw-business-gnome-spec.scm: wrap the
	  new due-bills api
	* src/engine/gnc-book.c: forcibly signal a book destroy event
	
2003-05-18  Derek Atkins  <derek@ihtfp.com>

	* src/engine/gnc-lot.[ch]: add LOT_IS_CLOSED and LOT_BALANCE
	  query parameter methods

2003-05-17  Derek Atkins  <derek@ihtfp.com>

	* src/import-export/qif-import/qif-file.scm:  the numeric test
	  regex was broken and would fail on ALL numerics, causing all
	  imports to be of value zero.  Oops.  I _thought_ I tested this,
	  but clearly not sufficiently.  :(

2003-05-16  David Hampton  <hampton@employees.org>

	* src/gnome/window-main.c: 
	* src/gnome-utils/gnc-mdi-utils.c:
	* src/gnome-utils/gnc-mdi-utils.h: Fix the "View xxxbar" menu
	items to track properly when a new data file is opened. #99598
	Consolidate the code for manipulating the View/Statusbar and
	View/Summarybar menu items.  Work around a Gnome MDI bug as best
	as possible.

2003-05-16  Derek Atkins  <derek@ihtfp.com>

	* src/gnome/reconcile-list.[ch]: Port to the gnc-query-list.
	  Remove all the extraneous code.
	* src/gnome-utils/gnc-query-list.[ch]: Add code so the reconcile-list
	  can successfully use the query-list.  Add a construct() method.
	  Add an "unselect_all()" method.  Add the ability to print numerics
	  as an ABS and invert the sort (defaults to off).  Add methods to
	  determine if an item is in the list, and one to refresh the display
	  of an item.
	* src/gnome-utils/search-param.[ch]: fix the spelling of resizeable

	* src/gnome-utils/gnc-query-list.c: we can't use a reversed list
	  and prepend() because then we're always adding row 0 so the
	  saved checkmarks fail.  So, use the slow way and use 'append()'.
	
2003-05-12  David Hampton  <hampton@employees.org>
