@@ -168,7 +168,7 @@
    'gnc:invoice-show-bills-due
    '<gw:void>
    "gnc_invoice_show_bills_due"
-   '((<gnc:Book*> book) (<gw:int> days_in_advance))
+   '((<gnc:Book*> book) (<gw:double> days_in_advance))
    "Dialog: display the bills due within the next \"days\"")
 
   ;;
